# rust-short-url

./: Cargo.toml
migrations/: 20241207191245_create_users_and_short_urls_tables.sql
src/: lib.rs  main.rs
src/database/: mod.rs
src/middleware/: mod.rs
src/schema/: auth.rs  mod.rs  url.rs  user.rs
src/services/: auth_services.rs  mod.rs  url_services.rs  user_services.rs
